--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -105,13 +105,13 @@ jobs:
           # cpack --config CPackConfig.cmake
           ${{ matrix.archiver }} ../../logalizer-ui_${{ matrix.os }}.7z .
           ls -laR
-          # cp ../logalizer-ui_${{ matrix.os }}.7z .
+          
 
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          path: build/ninja-multi-vcpkg/logalizer_${{ matrix.os }}.7z
-          name: logalizer_${{ matrix.os }}.7z
+          path: build/ninja-multi-vcpkg/logalizer-ui_${{ matrix.os }}.7z
+          name: logalizer-ui_${{ matrix.os }}.7z
 
       - name: Upload release asset
         if: github.event_name == 'release' && (github.event.action == 'published' || github.event.action == 'created')
@@ -120,6 +120,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./build/ninja-multi-vcpkg/logalizer_${{ matrix.os }}.7z
-          asset_name: logalizer_${{ matrix.os }}.7z
+          asset_path: ./build/ninja-multi-vcpkg/logalizer-ui_${{ matrix.os }}.7z
+          asset_name: logalizer-ui_${{ matrix.os }}.7z
           asset_content_type: application/zip
